<resources>
    <string name="app_name">RequestHttpExample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="default_name">octocat</string>
    <string name="sync_followers">(OBSERVABLE) FOLLOWERS</string>
    <string name="observable_following">(OBSERVABLE) FOLLOWING</string>
    <string name="async_info">(ASYNC) INFO</string>
    <string name="user_nick_hint">User nick</string>
    <string name="click_to_load">点击加载</string>
    <string name="retrofit1">Retrofit1</string>
    <string name="retrofit2">Retrofit2</string>
    <string name="rxjava">Rxjava</string>
    <string name="data_binding">DataBinding</string>
</resources>
