<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".main.MainActivity"
    tools:viewBindingIgnore="true">

    <Button
        android:id="@+id/retrofit1_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:onClick="retrofit1Click"
        android:text="@string/retrofit1"
        android:textSize="30sp" />

    <Button
        android:id="@+id/retrofit2_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:onClick="retrofit2Click"
        android:text="@string/retrofit2"
        android:textSize="30sp" />

    <Button
        android:id="@+id/rxjava_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:onClick="rxjavaClick"
        android:text="@string/rxjava"
        android:textSize="30sp" />

    <Button
        android:id="@+id/db_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:onClick="dataBindingClick"
        android:text="@string/data_binding"
        android:textSize="30sp" />
</LinearLayout>
